--- a/src/App.css
+++ b/src/App.css
@@ -282,12 +282,9 @@ button {
   padding: 1rem;
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
-  /* background-color: rgba(17, 25, 40, 0.75); */
-  /* box-shadow: 0px 2px 8px black; */
-  min-height: 100px;
+  min-height: 60px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.125);
   transition: all 0.2s ease;
-  padding-bottom: 0;
 }
 
 .search-result:hover,
@@ -367,6 +364,7 @@ button {
   flex-direction: row;
   width: 100%;
   justify-content: space-between;
+  align-items: center;
   gap: 0.5rem;
 }
 
