--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,14 @@
   background-color: transparent;
 }
 
+@font-face {
+  font-family: "Satoshi";
+  src: url("/public/assets/fonts/Satoshi-Regular.woff2") format("woff2");
+  font-display: swap;
+}
+*{
+  font-family: "Satoshi", sans-serif;
+}
 .App {
   width: 100%;
   display: flex;
@@ -216,11 +224,8 @@ button {
 
 .search-input {
   padding: 1rem;
-  border: none;
-  border-radius: 4px;
   width: clamp(300px, 80dvw, 500px);
   color: white;
-  font-weight: 600;
   height: 60px;
   font-size: 16px;
   backdrop-filter: blur(16px) saturate(180%);
@@ -387,8 +392,7 @@ button {
 }
 
 .search-result-title {
-  font-weight: 600;
-  font-size: 16px;
+  font-size: 1.2rem;
   text-overflow: ellipsis;
   overflow: hidden;
   white-space: nowrap;
@@ -397,15 +401,7 @@ button {
 .search-result-text {
   display: flex;
   flex-direction: column;
-}
-
-.search-result .year {
-  font-size: 18px;
-  font-weight: 400;
-  color: #ccc;
-  width: fit-content;
-  font-family: monospace;
-  letter-spacing: 1px;
+  align-items: center;
 }
 
 .actors,
@@ -507,6 +503,7 @@ button {
 .media-card .info .title {
   width: 100%;
   font-size: 20px;
+  letter-spacing: 1px;
   font-weight: 600;
 }
 
@@ -718,7 +715,6 @@ button {
   text-align: center;
   border-bottom: solid 1px rgba(255, 255, 255, 0.3);
   z-index: 1;
-  font-weight: 600;
 }
 
 .stream-card .title .text {
@@ -739,6 +735,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  letter-spacing: 1px;
   gap: 0.25rem;
 }
 
@@ -855,6 +852,9 @@ button {
   cursor: pointer;
   display: flex;
   justify-content: space-between;
-  color: #555;
+  color: #999;
   border-bottom: 0;
+}
+.search-input::placeholder{
+  color: #999;
 }
